sfdx-source/force-app/main/default/objects/WorkStep/fields/Tablet_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Tablet_Request_Type__c</fullName>
    <description>LEM-1395: Type of tablet request that will be created and manage by the vendor.</description>
    <formula>IF(
  AND(
    NOT(ISBLANK(Store_Account__c)),
    NOT(ISBLANK(TEXT(Store_Account__r.Order_Protocol__c))),
    CONTAINS(
    $Label.TabletRequestTypeOrderProtocolCriteria,
    TEXT(Store_Account__r.Order_Protocol__c)
    ),
    TEXT(Store_Account__r.Order_Protocol__c) &lt;&gt; $Label.AccountOrderProtocolTabletAndPrinter
  ),
  $Label.ShipToMerchantTabletRequestType,
  IF(
    TEXT(Store_Account__r.Order_Protocol__c) = $Label.AccountOrderProtocolTabletAndPrinter,
    $Label.ShipToMerchantPrinterTabletRequestType,
    &apos;&apos;
  )
)</formula>
    <label>Tablet Request Type</label>
    <type>Text</type>
</CustomField>