sfdx-source/force-app/main/default/objects/WorkStep/fields/Work_Order_Link__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Link__c</fullName>
    <description>LEM-2045: It stores link to associated Work Order. It is used for embedding Work Order Name with link in email templates.</description>
    <formula>HYPERLINK(LEFT($Api.Enterprise_Server_URL_540, FIND($CustomMetadata.Static_Configurations__mdt.Enterprise_Server_URL_Search_Key.Configuration_Value__c, $Api.Enterprise_Server_URL_540, 0) - 1) + WorkPlan.WorkOrderId, WorkPlan.WorkOrder.Work_Order_Name__c)</formula>
    <label>Work Order</label>
    <type>Text</type>
</CustomField>