sfdx-source/force-app/main/default/objects/WorkStep/fields/Work_Order_Menu_Setup_Method__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Menu_Setup_Method__c</fullName>
    <description>LEM-1048: Indicates Work Order menu setup method.</description>
    <formula>IF(
  NOT(ISBLANK(WorkOrder.ParentWorkOrderId)),
  TEXT(WorkOrder.Menu_Setup_Method__c),
  null
)</formula>
    <label>Menu Setup Method</label>
    <type>Text</type>
</CustomField>