sfdx-source/force-app/main/default/objects/WorkStep/fields/Work_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Type__c</fullName>
    <description>LEM-4190: It indicates value of Work Order type.</description>
    <formula>TEXT(WorkOrder.Type__c)</formula>
    <label>Work Order Type</label>
    <type>Text</type>
</CustomField>