sfdx-source/force-app/main/default/objects/WorkStep/fields/Work_Plan_Link__c.field-meta.xml
<CustomField>
    <fullName>Work_Plan_Link__c</fullName>
    <description>LEM-2045: It stores link to associated Work Plan. It is used for embedding Work Order Name with link in email templates.</description>
    <formula>HYPERLINK(LEFT($Api.Enterprise_Server_URL_540, FIND($CustomMetadata.Static_Configurations__mdt.Enterprise_Server_URL_Search_Key.Configuration_Value__c, $Api.Enterprise_Server_URL_540, 0) - 1) + WorkPlanId, WorkPlan.Name)</formula>
    <label>Work Plan</label>
    <type>Text</type>
</CustomField>