sfdx-source/force-app/main/default/objects/WorkStep/fields/Work_Step_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Work_Step_Sequence__c</fullName>
    <description>LEM-1061: It indicates sequence of WorkStep in a WorkOrder.</description>
    <label>Work Step Sequence</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>