sfdx-source/force-app/main/default/objects/WorkStep/fields/WorkPlanTemplateEntry__c.field-meta.xml
<CustomField>
    <fullName>WorkPlanTemplateEntry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-1061: It indicates WorkPlanTemplateEntry record used for creation.</description>
    <label>Work Plan Template Entry</label>
    <referenceTo>WorkPlanTemplateEntry</referenceTo>
    <relationshipLabel>Work Steps</relationshipLabel>
    <relationshipName>Work_Steps</relationshipName>
    <type>Lookup</type>
</CustomField>