sfdx-source/force-app/main/default/objects/WorkStep/validationRules/Restrict_User_To_Update_Status_Gone_Dark.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_User_To_Update_Status_Gone_Dark</fullName>
    <active>true</active>
    <description>LEM-13580 - Create New Status = &quot;Gone Dark&quot; on Work Steps and Work Plans</description>
    <errorConditionFormula>AND(
  ISPICKVAL(Status__c, &apos;Gone Dark&apos;),
  NOT( $Permission.OnBording_and_Activation)
)</errorConditionFormula>
    <errorMessage>You do not have permission to update Status to Gone Dark.</errorMessage>
</ValidationRule>